<resources>
    <string name="app_name">Dayao_marvin_mp2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="activity_name">Machine Problem 2</string>



    <string name="username_txt">Login:</string>
    <string name="username">Type: admin</string>
    <string name="pass_txt">Password:</string>
    <string name="password">use: 12345</string>
    <string name="attempt">Attempt:</string>
    <string name="login_btn">Login Now</string>


    <string name="login_success_msg">You are successfully logged-in!</string>

    <string name="logged_in_txt">You are logged-in as:</string>
    <string name="user">admin</string>

    <string name="cart_txt">Your Cart:</string>
    <string name="addItemsCart">Add Items to Cart:</string>
    <string name="checkbox_beef">Beef (Php 250/kg)</string>
    <string name="checkbox_chicken">Chicken (Php 150/kg)</string>
    <string name="checkbox_fish">Fish (Php 180/kg)</string>
    <string name="checkbox_pork">Pork (Php 200/kg)</string>

    <string name="textView_qty">Qty</string>
    <string name="textView_itemName">Item Name</string>
    <string name="textView_price">Price</string>
    <string name="textView_totalTxt">Total: Php</string>
    <string name="textView_totalAmount">0.00</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
