<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/activity_name"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/white"
        android:textSize="36sp"
        android:typeface="monospace"
        tools:background="@android:color/white"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/username_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/username_txt"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_name"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.03" />

    <TextView
        android:id="@+id/pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/pass_txt"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_name"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.782"
        app:layout_constraintHorizontal_bias="0.038" />

    <EditText
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/username_txt"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_name"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintVertical_bias="0.495" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.326" />

    <TextView
        android:id="@+id/attempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempt"
        android:textColor="@android:color/black"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/pass_txt"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/attempt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/attempt"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.914" />

</android.support.constraint.ConstraintLayout>